[package]
name = "gbr"
version = "0.1.0"
edition = "2024"
default-run = "gbr"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
sdl3 = { version = "0.14.10", features = ["build-from-source"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "test"
path = "src/test.rs"
